--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -19,7 +19,7 @@
         <button style="font-size: 14px" type="submit">Submit</button>
     </form> -->
     <label for="fname">Input a well formatted docstring:</label>
-    <form id="white-standard">
+    <form id="white-standard" method="POST">
         <input type="text" id="fname" name="fname"><br><br>
         <button style="font-size: 14px" type="submit">Submit</button>
       </form>
