--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -19,14 +19,14 @@
         <button style="font-size: 14px" type="submit">Submit</button>
     </form> -->
     <label for="fname">Input a well formatted docstring:</label>
-    <form id="white-standard" method="POST">
-        <input type="text" id="fname" name="fname"><br><br>
+    <form id="image-upload-form" method="POST" style="width:400px; border: none" name="myForm" onsubmit="return uploadImage()">
+        <textarea type="text" id="fname" name="fname" style="width:400px; height:100px;"></textarea>
         <button style="font-size: 14px" type="submit">Submit</button>
       </form>
       
 
-    <p id="textForUpload" style="visibility: hidden; padding-top: 67px; font-size: 14px;"> Uploaded Image: </p>
-    <img style="display: block;" id="image" width="200"> </img>
+    <!-- p id="textForUpload" style="visibility: hidden; padding-top: 67px; font-size: 14px;"> Uploaded Image: </p>
+    <img style="display: block;" id="image" width="200"> </img> -->
 
     <!-- <h2>What is this?</h2>
     <p>This is a site where you can upload an image of a mathematical expression and it will give you the LaTeX code that would produce that equation!
@@ -66,7 +66,7 @@
 
 <div id="right" style="display: inline; float: left; margin-top: 10px; margin-bottom: 10px;">
     <div style="display: block; margin-bottom: 20px;">
-    <p style="display: inline;">GPT-2 Code Prediction: <input type="text" id="code" value="" style="display: inline-block;  padding-right: 5px; padding-top: 2.5px; padding-bottom: 2.5px; padding-left: 5px;">
+    <p style="display: inline;">GPT-2 Code Prediction: <input type="text" id="code" value="" style="display: inline-block;  padding-right: 5px; padding-top: 2.5px; padding-bottom: 2.5px; padding-left: 5px; height: 200px; width: 400px;">
     </p>
     <div class="tooltip">
         <button onclick="copy()" onmouseout="outFunc()">
@@ -75,21 +75,21 @@
           </button>
     </div>
     </div>
-    <button style="display: inline; margin-left:10px;" type="button" id="compText" onclick="compile()">Compile LaTeX</button>
+<!--     <button style="display: inline; margin-left:10px;" type="button" id="compText" onclick="compile()">Compile LaTeX</button>
     <button style="display: inline; margin-left:1px;" type="button" onclick="wolfram()">Send To Wolfram Alpha</button>
-    <button style="display: inline; margin-left:1px;" type="button" onclick="save_permalink()">Save Result</button>
-    <div id="error"></div>
+    <button style="display: inline; margin-left:1px;" type="button" onclick="save_permalink()">Save Result</button> -->
+ <!--    <div id="error"></div>
 
-    <p id="perma" style="font-size: 10px; visibility: hidden;">Permalink to this result: <a id="permalink"></a></p>
+    <p id="perma" style="font-size: 10px; visibility: hidden;">Permalink to this result: <a id="permalink"></a></p> -->
 
-    <div id="compileDiv"
+    <!-- <div id="compileDiv"
          style="background-color: #ffffff; width:500px; height: 200px; visibility: hidden; margin-top:10px; margin-left: auto; margin-right: auto;">
         <img style="visibility: hidden; margin-top: 10px; text-align: center; margin-left: auto; margin-right: auto; display: block; padding-top: 10px;" id="compile"> </img>
-    </div>
-    <div id="wolframDiv" style="visibility: hidden; margin-top:10px; text-align: center;"> 
+    </div> -->
+   <!--  <div id="wolframDiv" style="visibility: hidden; margin-top:10px; text-align: center;"> 
         <img style="margin-top: 10px;" id="wolfram"> </img>
     </div>
-</div>
+ --></div>
 </body>
 
 </html>
